--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "2.3.0",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
   "scripts": {
-    "postinstall": "cd node_modules/react-dnd-scrollzone && npm i --ignore-scripts && npm run build",
     "prebuild": "npm run lint",
     "build": "npm run clean && NODE_ENV=rollup rollup -c",
     "build:storybook": "npm run clean:storybook && build-storybook -o build",
@@ -62,7 +61,7 @@
     "prop-types": "^15.6.1",
     "react-dnd": "^6.0.0",
     "react-dnd-html5-backend": "^6.0.0",
-    "react-dnd-scrollzone": "github:dolezel/react-dnd-scrollzone.git#e0e42402f92c7e11717c467cb47aa76e3f3bc48a",
+    "react-dnd-scrollzone": "github:dolezel/react-dnd-scrollzone.git#dist",
     "react-lifecycles-compat": "^3.0.4",
     "react-virtualized": "^9.19.1"
   },
